--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://AssetGrav.github.io/sila-sport-new",
+  "homepage": "http://AssetGrav.github.io/",
   "name": "sila-sport-new",
   "version": "0.1.0",
   "private": true,
